Use Integer.valueOf instead of new Integer in tests.